# roboteam_input

./: .gitignore  CMakeLists.txt  README.md  input_plugin.xml  joy_node.launch  joysticks.launch  joysticks_arduino.launch  keyboard.launch  package.xml  roboteam_input.launch
boost-process/REMOVE_THIS_TO_ENABLE_GIT.git/: config  index  packed-refs
boost-process/REMOVE_THIS_TO_ENABLE_GIT.git/logs/refs/remotes/origin/: HEAD
boost-process/REMOVE_THIS_TO_ENABLE_GIT.git/objects/pack/: pack-32be5613ac3563171e91a7f1e7ace37344c64b78.idx  pack-32be5613ac3563171e91a7f1e7ace37344c64b78.pack
boost-process/REMOVE_THIS_TO_ENABLE_GIT.git/refs/heads/: develop
boost-process/include/boost/process/detail/posix/: basic_cmd.hpp
include/roboteam_input/joystick/: JoystickHandler.h  JoystickManager.h  JoystickState.h
resource/: InputPlugin.ui  widget.ui
resources/: widget.ui
src/: constants.h  input_interface.cpp  input_interface.h  joystick_enums.h  joystick_input.cpp  joystick_input.h  joystick_profiles.h  keyboard_controller.cpp  roboteam_input.cpp  run_input_plugin.py
src/input_plugin/: input_plugin.py
src/input_plugin/widgets/: input_widget.py
src/joystick/: JoystickHandler.cpp  JoystickHandler.h  JoystickManager.cpp  JoystickManager.h  JoystickState.cpp  JoystickState.h  joystick.cpp  joystick_enums.h  joystick_manager.cpp  joystick_manager.h  joystick_old.cpp  joystick_profiles.h
src/keyboard/: keyboard.cpp  keyboard_manager.cpp  keyboard_manager.h
test/: JoystickTest.cpp  KeyboardManagerTest.cpp  SimpleTest.cpp
